CLAS-673: WIP. Creating line item when submitting expert cost details.
